# voron-nameplate-generator

./: .dockerignore  .gitignore  Procfile  README.md  nginx.conf  package-lock.json  package.json  project.toml  pyproject.toml  vite.config.ts
assets/plates/: blank_2020.step  blank_zero.step  blank_zero_two.step  logo_2020.step  logo_zero.step  logo_zero_two.step
frontend/src/: App.tsx
frontend/src/components/header/: index.tsx
frontend/src/pages/nameplates/: create.tsx  index.ts  show.tsx
vng/: __init__.py  render.py  types.py
